--- a/cloudbuild.backend.yaml
+++ b/cloudbuild.backend.yaml
@@ -4,6 +4,7 @@ steps:
   # Project ID akan secara otomatis terisi ketika melakukan deploy di project yg dipilih
   - name: "gcr.io/cloud-builders/docker"
     args: ["build", "-t", "gcr.io/$PROJECT_ID/tugas6-backend-179", "."]
+    dir: "be"
 
   # Meng-upload/push image yg telah dibuat ke Artifact Registry
   # Pada bagian ini, dijalankan perintah "docker push 'gcr.io/$PROJECT_ID/tcc-be'"
