update tujuan direktori file cloudbuild

--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -6,7 +6,7 @@ steps:
         "-c",
         "gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy",
       ]
-    dir: "fe"
+    dir: "frontend"
 timeout: "1600s"
 
 options:
