--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,2 +1,14 @@
 runtime: nodejs20
-service: default
+service: tugas6-179-fe
+instance_class: F1
+
+handlers:
+  - url: /
+    static_files: dist/index.html
+    upload: dist/index.html
+    
+  - url: /(.*)
+    static_files: dist/\1
+    upload: dist/(.*)
+
+default_expiration: "1h"
