--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -1,4 +1,13 @@
 steps:
+  - name: 'node:20'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        cd frontend
+        npm install
+        npm run build
+
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: "bash"
     args:
@@ -7,7 +16,3 @@ steps:
         "gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy",
       ]
     dir: "frontend"
-timeout: "1600s"
-
-options:
-  logging: CLOUD_LOGGING_ONLY
