--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -16,3 +16,6 @@ steps:
         "gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy",
       ]
     dir: "frontend"
+
+options:
+  logging: CLOUD_LOGGING_ONLY
